# hpc4ds

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.h.in
include/sp/: list.h
inputs/: 0.txt  2.txt
src/: list.c  sudoku-mpi.c
